[package]
name = "cubehead"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
openxr = "0.16.0"
glutin = "0.29.1"
nalgebra = { version = "0.31.1", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
glow = "0.11.2"
glutin-openxr-opengl-helper = { git = "https://github.com/ChatImproVR/rust-opengl-openxr-example.git", branch = "library" }
